--- a/Statistical thinking faith.ipynb
+++ b/Statistical thinking faith.ipynb
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### From the results above, we can see that there are 514 observations and there is a missing value in the salary column."
+    "#### From the results above, we can see that there are 514 observations and there is a missing value in the salary column. What we plan on doing with the missing value is to ignore it in further calculations"
    ]
   },
   {
